glyles/gwb/GWBParser.py
# Generated from GWB.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class GWBParser ( Parser ):

    grammarFileName = "GWB.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'freeEnd'", "'redEnd'", "<INVALID>", 
                     "'C'", "'N'", "'O'", "'P'", "<INVALID>", "'Anhydro'", 
                     "'0d'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'@'", "','", "';'", "'--'", 
                     "'-'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'a'", 
                     "'ai'", "'c'", "'d'", "'e'", "'t'", "'='", "'i'", "'/'", 
                     "'$'", "'#'", "' '", "'?'" ]

    symbolicNames = [ "<INVALID>", "FREEEND", "REDEND", "SAC", "CARBON", 
                      "NITROGEN", "OXYGEN", "PHOSPHOR", "FG", "ANHYDRO", 
                      "HEAD", "HEADD", "END", "COUNT", "TYPE", "RING", "NUM", 
                      "AT", "COMMA", "SEMICOLON", "DOUBLEDASH", "DASH", 
                      "LPAR", "RPAR", "LBRACE", "RBRACE", "LBRACK", "RBRACK", 
                      "A", "AI", "C", "D", "E", "T", "EQ", "I", "SLASH", 
                      "DOLLAR", "HASH", "SPACE", "QMARK" ]

    RULE_start = 0
    RULE_branch = 1
    RULE_deriv = 2
    RULE_saci = 3
    RULE_con = 4
    RULE_add = 5
    RULE_fgi = 6
    RULE_carb = 7
    RULE_modi = 8
    RULE_qnum = 9
    RULE_typi = 10
    RULE_bridge = 11
    RULE_ct = 12
    RULE_bos = 13

    ruleNames =  [ "start", "branch", "deriv", "saci", "con", "add", "fgi", 
                   "carb", "modi", "qnum", "typi", "bridge", "ct", "bos" ]

    EOF = Token.EOF
    FREEEND=1
    REDEND=2
    SAC=3
    CARBON=4
    NITROGEN=5
    OXYGEN=6
    PHOSPHOR=7
    FG=8
    ANHYDRO=9
    HEAD=10
    HEADD=11
    END=12
    COUNT=13
    TYPE=14
    RING=15
    NUM=16
    AT=17
    COMMA=18
    SEMICOLON=19
    DOUBLEDASH=20
    DASH=21
    LPAR=22
    RPAR=23
    LBRACE=24
    RBRACE=25
    LBRACK=26
    RBRACK=27
    A=28
    AI=29
    C=30
    D=31
    E=32
    T=33
    EQ=34
    I=35
    SLASH=36
    DOLLAR=37
    HASH=38
    SPACE=39
    QMARK=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bos(self):
            return self.getTypedRuleContext(GWBParser.BosContext,0)


        def branch(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GWBParser.BranchContext)
            else:
                return self.getTypedRuleContext(GWBParser.BranchContext,i)


        def DOLLAR(self):
            return self.getToken(GWBParser.DOLLAR, 0)

        def RBRACK(self):
            return self.getToken(GWBParser.RBRACK, 0)

        def getRuleIndex(self):
            return GWBParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = GWBParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.bos()
            self.state = 29
            self.branch()
            self.state = 32
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==27:
                self.state = 30
                self.match(GWBParser.RBRACK)
                self.state = 31
                self.branch()


            self.state = 34
            self.match(GWBParser.DOLLAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BranchContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def con(self):
            return self.getTypedRuleContext(GWBParser.ConContext,0)


        def deriv(self):
            return self.getTypedRuleContext(GWBParser.DerivContext,0)


        def LPAR(self):
            return self.getToken(GWBParser.LPAR, 0)

        def branch(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GWBParser.BranchContext)
            else:
                return self.getTypedRuleContext(GWBParser.BranchContext,i)


        def RPAR(self):
            return self.getToken(GWBParser.RPAR, 0)

        def getRuleIndex(self):
            return GWBParser.RULE_branch

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBranch" ):
                listener.enterBranch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBranch" ):
                listener.exitBranch(self)




    def branch(self):

        localctx = GWBParser.BranchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_branch)
        try:
            self.state = 54
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 36
                self.con()
                self.state = 37
                self.deriv()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 39
                self.match(GWBParser.LPAR)
                self.state = 40
                self.branch()
                self.state = 41
                self.match(GWBParser.RPAR)
                self.state = 42
                self.branch()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 44
                self.con()
                self.state = 45
                self.deriv()
                self.state = 50
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 46
                    self.match(GWBParser.LPAR)
                    self.state = 47
                    self.branch()
                    self.state = 48
                    self.match(GWBParser.RPAR)


                self.state = 52
                self.branch()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DerivContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HEADD(self):
            return self.getToken(GWBParser.HEADD, 0)

        def DASH(self):
            return self.getToken(GWBParser.DASH, 0)

        def modi(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GWBParser.ModiContext)
            else:
                return self.getTypedRuleContext(GWBParser.ModiContext,i)


        def saci(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GWBParser.SaciContext)
            else:
                return self.getTypedRuleContext(GWBParser.SaciContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(GWBParser.COMMA)
            else:
                return self.getToken(GWBParser.COMMA, i)

        def RING(self):
            return self.getToken(GWBParser.RING, 0)

        def AT(self):
            return self.getToken(GWBParser.AT, 0)

        def NUM(self):
            return self.getToken(GWBParser.NUM, 0)

        def getRuleIndex(self):
            return GWBParser.RULE_deriv

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeriv" ):
                listener.enterDeriv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeriv" ):
                listener.exitDeriv(self)




    def deriv(self):

        localctx = GWBParser.DerivContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_deriv)
        self._la = 0 # Token type
        try:
            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 58
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 56
                    self.match(GWBParser.HEADD)
                    self.state = 57
                    self.match(GWBParser.DASH)


                self.state = 63
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 60
                        self.modi() 
                    self.state = 65
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

                self.state = 67 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 66
                        self.saci()

                    else:
                        raise NoViableAltException(self)
                    self.state = 69 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1099513802224) != 0):
                    self.state = 71
                    self.modi()
                    self.state = 76
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 79
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                if la_ == 1:
                    self.state = 77
                    self.match(GWBParser.COMMA)
                    self.state = 78
                    self.match(GWBParser.RING)


                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==17 or _la==18:
                    self.state = 82
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==18:
                        self.state = 81
                        self.match(GWBParser.COMMA)


                    self.state = 84
                    self.match(GWBParser.AT)
                    self.state = 85
                    self.match(GWBParser.NUM)


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1099513802224) != 0):
                    self.state = 88
                    self.modi()
                    self.state = 93
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==17 or _la==18:
                    self.state = 95
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==18:
                        self.state = 94
                        self.match(GWBParser.COMMA)


                    self.state = 97
                    self.match(GWBParser.AT)
                    self.state = 98
                    self.match(GWBParser.NUM)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SaciContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COUNT(self):
            return self.getToken(GWBParser.COUNT, 0)

        def SAC(self):
            return self.getToken(GWBParser.SAC, 0)

        def getRuleIndex(self):
            return GWBParser.RULE_saci

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSaci" ):
                listener.enterSaci(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSaci" ):
                listener.exitSaci(self)




    def saci(self):

        localctx = GWBParser.SaciContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_saci)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            _la = self._input.LA(1)
            if not(_la==3 or _la==13):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DOUBLEDASH(self):
            return self.getToken(GWBParser.DOUBLEDASH, 0)

        def qnum(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GWBParser.QnumContext)
            else:
                return self.getTypedRuleContext(GWBParser.QnumContext,i)


        def typi(self):
            return self.getTypedRuleContext(GWBParser.TypiContext,0)


        def getRuleIndex(self):
            return GWBParser.RULE_con

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCon" ):
                listener.enterCon(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCon" ):
                listener.exitCon(self)




    def con(self):

        localctx = GWBParser.ConContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_con)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(GWBParser.DOUBLEDASH)
            self.state = 109
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.state = 106
                self.qnum()
                self.state = 107
                self.typi()


            self.state = 112
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.state = 111
                self.qnum()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AddContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQ(self):
            return self.getToken(GWBParser.EQ, 0)

        def LBRACK(self):
            return self.getToken(GWBParser.LBRACK, 0)

        def NUM(self, i:int=None):
            if i is None:
                return self.getTokens(GWBParser.NUM)
            else:
                return self.getToken(GWBParser.NUM, i)

        def RBRACK(self):
            return self.getToken(GWBParser.RBRACK, 0)

        def ct(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GWBParser.CtContext)
            else:
                return self.getTypedRuleContext(GWBParser.CtContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(GWBParser.COMMA)
            else:
                return self.getToken(GWBParser.COMMA, i)

        def C(self):
            return self.getToken(GWBParser.C, 0)

        def getRuleIndex(self):
            return GWBParser.RULE_add

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdd" ):
                listener.enterAdd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdd" ):
                listener.exitAdd(self)




    def add(self):

        localctx = GWBParser.AddContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_add)
        self._la = 0 # Token type
        try:
            self.state = 142
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [34]:
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.match(GWBParser.EQ)
                self.state = 115
                self.match(GWBParser.LBRACK)
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==30 or _la==33:
                    self.state = 116
                    self.ct()


                self.state = 119
                self.match(GWBParser.NUM)
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==18:
                    self.state = 120
                    self.match(GWBParser.COMMA)
                    self.state = 122
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==30 or _la==33:
                        self.state = 121
                        self.ct()


                    self.state = 124
                    self.match(GWBParser.NUM)
                    self.state = 129
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 130
                self.match(GWBParser.RBRACK)
                pass
            elif token in [30]:
                self.enterOuterAlt(localctx, 2)
                self.state = 131
                self.match(GWBParser.C)
                self.state = 132
                self.match(GWBParser.LBRACK)
                self.state = 133
                self.match(GWBParser.NUM)
                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==18:
                    self.state = 134
                    self.match(GWBParser.COMMA)
                    self.state = 135
                    self.match(GWBParser.NUM)
                    self.state = 140
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 141
                self.match(GWBParser.RBRACK)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FgiContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COUNT(self):
            return self.getToken(GWBParser.COUNT, 0)

        def bridge(self):
            return self.getTypedRuleContext(GWBParser.BridgeContext,0)


        def FG(self):
            return self.getToken(GWBParser.FG, 0)

        def getRuleIndex(self):
            return GWBParser.RULE_fgi

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFgi" ):
                listener.enterFgi(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFgi" ):
                listener.exitFgi(self)




    def fgi(self):

        localctx = GWBParser.FgiContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_fgi)
        try:
            self.state = 147
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 144
                self.match(GWBParser.COUNT)
                pass
            elif token in [4, 5, 6, 7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 145
                self.bridge()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 3)
                self.state = 146
                self.match(GWBParser.FG)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CarbContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CARBON(self):
            return self.getToken(GWBParser.CARBON, 0)

        def NUM(self):
            return self.getToken(GWBParser.NUM, 0)

        def add(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GWBParser.AddContext)
            else:
                return self.getTypedRuleContext(GWBParser.AddContext,i)


        def AI(self):
            return self.getToken(GWBParser.AI, 0)

        def A(self):
            return self.getToken(GWBParser.A, 0)

        def I(self):
            return self.getToken(GWBParser.I, 0)

        def getRuleIndex(self):
            return GWBParser.RULE_carb

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCarb" ):
                listener.enterCarb(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCarb" ):
                listener.exitCarb(self)




    def carb(self):

        localctx = GWBParser.CarbContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_carb)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 35165044736) != 0):
                self.state = 149
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 35165044736) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 152
            self.match(GWBParser.CARBON)
            self.state = 153
            self.match(GWBParser.NUM)
            self.state = 157
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==30 or _la==34:
                self.state = 154
                self.add()
                self.state = 159
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModiContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self, i:int=None):
            if i is None:
                return self.getTokens(GWBParser.NUM)
            else:
                return self.getToken(GWBParser.NUM, i)

        def DASH(self, i:int=None):
            if i is None:
                return self.getTokens(GWBParser.DASH)
            else:
                return self.getToken(GWBParser.DASH, i)

        def ANHYDRO(self):
            return self.getToken(GWBParser.ANHYDRO, 0)

        def COMMA(self):
            return self.getToken(GWBParser.COMMA, 0)

        def bridge(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GWBParser.BridgeContext)
            else:
                return self.getTypedRuleContext(GWBParser.BridgeContext,i)


        def fgi(self):
            return self.getTypedRuleContext(GWBParser.FgiContext,0)


        def QMARK(self):
            return self.getToken(GWBParser.QMARK, 0)

        def FG(self):
            return self.getToken(GWBParser.FG, 0)

        def D(self):
            return self.getToken(GWBParser.D, 0)

        def E(self):
            return self.getToken(GWBParser.E, 0)

        def carb(self):
            return self.getTypedRuleContext(GWBParser.CarbContext,0)


        def HEAD(self):
            return self.getToken(GWBParser.HEAD, 0)

        def HEADD(self):
            return self.getToken(GWBParser.HEADD, 0)

        def END(self):
            return self.getToken(GWBParser.END, 0)

        def getRuleIndex(self):
            return GWBParser.RULE_modi

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModi" ):
                listener.enterModi(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModi" ):
                listener.exitModi(self)




    def modi(self):

        localctx = GWBParser.ModiContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_modi)
        self._la = 0 # Token type
        try:
            self.state = 206
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,30,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 162
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,24,self._ctx)
                if la_ == 1:
                    self.state = 160
                    self.match(GWBParser.NUM)
                    self.state = 161
                    self.match(GWBParser.COMMA)


                self.state = 164
                self.match(GWBParser.NUM)
                self.state = 165
                self.match(GWBParser.DASH)
                self.state = 166
                self.match(GWBParser.ANHYDRO)
                self.state = 167
                self.match(GWBParser.DASH)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 168
                self.match(GWBParser.NUM)
                self.state = 169
                self.match(GWBParser.DASH)
                self.state = 170
                self.bridge()
                self.state = 171
                self.match(GWBParser.DASH)
                self.state = 172
                self.fgi()
                self.state = 173
                self.match(GWBParser.DASH)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 176
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==21:
                    self.state = 175
                    self.match(GWBParser.DASH)


                self.state = 179
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==16:
                    self.state = 178
                    self.match(GWBParser.NUM)


                self.state = 184
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,27,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 181
                        self.bridge() 
                    self.state = 186
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,27,self._ctx)

                self.state = 187
                self.fgi()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 188
                self.match(GWBParser.QMARK)
                self.state = 189
                self.match(GWBParser.NUM)
                self.state = 190
                self.match(GWBParser.FG)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 191
                self.match(GWBParser.NUM)
                self.state = 199
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [18, 31]:
                    self.state = 194
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==18:
                        self.state = 192
                        self.match(GWBParser.COMMA)
                        self.state = 193
                        self.match(GWBParser.NUM)


                    self.state = 196
                    self.match(GWBParser.D)
                    pass
                elif token in [32]:
                    self.state = 197
                    self.match(GWBParser.E)
                    pass
                elif token in [4, 28, 29, 35]:
                    self.state = 198
                    self.carb()
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 201
                self.match(GWBParser.HEAD)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 202
                self.match(GWBParser.HEADD)
                self.state = 203
                self.match(GWBParser.DASH)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 204
                self.match(GWBParser.DASH)
                self.state = 205
                self.match(GWBParser.END)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QnumContext(ParserRuleContext):
        __slots__ = 'parser'
